added verbose option..

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,9 +12,11 @@ jobs:
         # os: [ubuntu-latest, windows-latest, macos-latest]
         os: [ubuntu-latest, windows-latest]
         build_type: [Debug, Release]
+        verbose_log: [ON, OFF]
 
     env:
       BUILD_TYPE: ${{ matrix.build_type }}
+      VERBOSE_LOG: ${{ matrix.verbose_log }}
 
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +24,7 @@ jobs:
           submodules: true
 
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DVERBOSE_LOG=${{env.VERBOSE_LOG}}
 
       - name: Build
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
