solved minor compatibility issue..

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ endif()
 install(
     TARGETS ${PROJECT_NAME}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 install(
     FILES ${SMT_HEADERS} ${CMAKE_CURRENT_BINARY_DIR}/semitone_export.h
