--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE /W4)
 else()
     target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
-    if (ADD_COVERAGE)
+    if (ENABLE_COVERAGE)
         if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
             target_compile_options(${PROJECT_NAME} PRIVATE --coverage)
             target_link_libraries(${PROJECT_NAME} PUBLIC gcov)
