--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install dependencies
         if: matrix.build_type == 'Debug' && matrix.os == 'ubuntu-latest'
-        run: sudo apt-get install -y lcov
+        run: sudo apt-get install -y lcov valgrind
 
       - name: Configure CMake (Debug)
         if: matrix.build_type == 'Debug'
@@ -39,7 +39,7 @@ jobs:
 
       - name: Test
         working-directory: ${{github.workspace}}/build
-        run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure -T Test -T Coverage
+        run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure -T Test -T Coverage -T memcheck
 
       - name: Make coverage report
         if: matrix.build_type == 'Debug' && matrix.os == 'ubuntu-latest'
