--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,15 +31,21 @@ jobs:
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=ON
 
       - name: Configure CMake
-        if: matrix.build_type == 'Release'
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release
+        if: matrix.build_type != 'Debug'
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
       - name: Build
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-      - name: Test
+      - name: Test (Debug)
+        if: matrix.build_type == 'Debug' && matrix.os == 'ubuntu-latest'
         working-directory: ${{github.workspace}}/build
         run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure -T Test -T Coverage -T memcheck
+
+      - name: Test
+        if: matrix.build_type != 'Debug' || matrix.os != 'ubuntu-latest'
+        working-directory: ${{github.workspace}}/build
+        run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure -T Test
 
       - name: Make coverage report
         if: matrix.build_type == 'Debug' && matrix.os == 'ubuntu-latest'
