Update CMakeLists.txt and json submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,27 +7,28 @@ enable_testing()
 
 add_subdirectory(extern/json)
 
-add_library(${PROJECT_NAME} src/sat_core.cpp src/constr.cpp src/clause.cpp src/sat_eq.cpp src/sat_conj.cpp src/sat_disj.cpp src/sat_exact_one.cpp src/theory.cpp src/ov/ov_theory.cpp src/ov/ov_eq.cpp src/lra/lra_theory.cpp src/lra/lra_assertion.cpp src/lra/lra_eq.cpp src/dl/idl_theory.cpp src/dl/rdl_theory.cpp)
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
-target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/ov> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/lra> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/dl>)
-target_link_libraries(${PROJECT_NAME} PUBLIC json)
+add_library(SeMiTONE src/sat_core.cpp src/constr.cpp src/clause.cpp src/sat_eq.cpp src/sat_conj.cpp src/sat_disj.cpp src/sat_exact_one.cpp src/theory.cpp src/ov/ov_theory.cpp src/ov/ov_eq.cpp src/lra/lra_theory.cpp src/lra/lra_assertion.cpp src/lra/lra_eq.cpp src/dl/idl_theory.cpp src/dl/rdl_theory.cpp)
+add_dependencies(SeMiTONE json)
+target_compile_features(SeMiTONE PUBLIC cxx_std_17)
+target_include_directories(SeMiTONE PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/ov> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/lra> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/dl>)
+target_link_libraries(SeMiTONE PUBLIC json)
 
 if(BUILD_TESTING)
     add_subdirectory(tests)
 endif()
 
 if(MSVC)
-    target_compile_options(${PROJECT_NAME} PRIVATE /W4)
+    target_compile_options(SeMiTONE PRIVATE /W4)
 else()
-    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
+    target_compile_options(SeMiTONE PRIVATE -Wall -Wextra -Wpedantic)
     if (ENABLE_COVERAGE)
         if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-            target_compile_options(${PROJECT_NAME} PRIVATE --coverage)
-            target_link_libraries(${PROJECT_NAME} PUBLIC gcov)
+            target_compile_options(SeMiTONE PRIVATE --coverage)
+            target_link_libraries(SeMiTONE PUBLIC gcov)
         endif()
     endif()
 endif()
 
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_NAME SeMiTONE)
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
