--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,8 +42,13 @@ jobs:
         working-directory: ${{github.workspace}}/build
         run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure -T Test -T Coverage -T memcheck
 
-      - name: Test
-        if: matrix.build_type != 'Debug' || matrix.os != 'ubuntu-latest'
+      - name: Test with coverage
+        if: matrix.build_type == 'Debug' && matrix.os == 'ubuntu-latest'
+        working-directory: ${{github.workspace}}/build
+        run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure -T Test -T Coverage
+
+      - name: Test without coverage
+        if: matrix.build_type == 'Release' || matrix.os != 'ubuntu-latest'
         working-directory: ${{github.workspace}}/build
         run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure -T Test
 
