Add option to build listeners in CMakeLists.txt and update sat_core.hpp to include listener functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,18 @@ enable_testing()
 
 add_subdirectory(extern/json)
 
+option(BUILD_LISTENERS "Builds the listeners" OFF)
+
 add_library(SeMiTONE src/sat_core.cpp src/constr.cpp src/clause.cpp src/theory.cpp src/ov/ov_theory.cpp src/lra/lra_theory.cpp src/lra/lra_assertion.cpp src/lra/lra_eq.cpp src/dl/idl_theory.cpp src/dl/rdl_theory.cpp)
 add_dependencies(SeMiTONE json)
 target_compile_features(SeMiTONE PUBLIC cxx_std_17)
 target_include_directories(SeMiTONE PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/ov> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/lra> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/dl>)
 target_link_libraries(SeMiTONE PUBLIC json)
+
+message(STATUS "Build listeners: ${BUILD_LISTENERS}")
+if(BUILD_LISTENERS)
+    target_compile_definitions(SeMiTONE PUBLIC BUILD_LISTENERS)
+endif()
 
 if(BUILD_TESTING)
     add_subdirectory(tests)
