Refactor constructors in idl_theory and rdl_theory to initialize preds vector and update dependencies

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,10 +10,10 @@ add_executable(ov_tests test_ov.cpp)
 add_dependencies(ov_tests SeMiTONE json)
 target_link_libraries(ov_tests PRIVATE SeMiTONE json)
 
-add_executable(rdl_tests test_rdl.cpp)
-add_dependencies(rdl_tests SeMiTONE json)
-target_link_libraries(rdl_tests PRIVATE SeMiTONE json)
+add_executable(dl_tests test_dl.cpp)
+add_dependencies(dl_tests SeMiTONE json)
+target_link_libraries(dl_tests PRIVATE SeMiTONE json)
 
 add_test(NAME SAT_Test COMMAND sat_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 add_test(NAME LRA_Test COMMAND lra_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-add_test(NAME RDL_Test COMMAND rdl_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+add_test(NAME RDL_Test COMMAND dl_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
