Solved memory leak issue in the application.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,4 +16,4 @@ target_link_libraries(dl_tests PRIVATE SeMiTONE json)
 
 add_test(NAME SAT_Test COMMAND sat_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 add_test(NAME LRA_Test COMMAND lra_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-add_test(NAME RDL_Test COMMAND dl_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+add_test(NAME DL_Test COMMAND dl_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
