chore: Update SeMiTONE listeners build option and API flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,12 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=undefined")
 include(CTest)
 enable_testing()
 
-option(BUILD_LISTENERS "Builds the listeners" OFF)
+option(BUILD_LISTENERS "Builds SeMiTONE listeners" OFF)
 option(ENABLE_API "SeMiTONE API" OFF)
 
-set(SEMITONE_SOURCE src/sat_core.cpp src/constr.cpp src/clause.cpp src/theory.cpp src/ov/ov_theory.cpp src/lra/lra_theory.cpp src/lra/lra_assertion.cpp src/lra/lra_eq.cpp src/dl/idl_theory.cpp src/dl/rdl_theory.cpp)
+set(SEMITONE_SOURCE )
 
-message(STATUS "SeMiTONE API: ${ENABLE_API}")
-if(ENABLE_API)
-    list(APPEND SEMITONE_SOURCE src/semitone_api.cpp)
-endif()
-
-add_library(SeMiTONE ${SEMITONE_SOURCE})
+add_library(SeMiTONE src/sat_core.cpp src/constr.cpp src/clause.cpp src/theory.cpp src/ov/ov_theory.cpp src/lra/lra_theory.cpp src/lra/lra_assertion.cpp src/lra/lra_eq.cpp src/dl/idl_theory.cpp src/dl/rdl_theory.cpp $<$<BOOL:${ENABLE_API}>:${CMAKE_CURRENT_SOURCE_DIR}/src/semitone_api.cpp>)
 add_dependencies(SeMiTONE json)
 target_compile_features(SeMiTONE PUBLIC cxx_std_17)
 target_include_directories(SeMiTONE PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/ov> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/lra> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/dl>)
@@ -25,11 +20,12 @@ if(NOT TARGET json)
 endif()
 target_link_libraries(SeMiTONE PUBLIC json)
 
-message(STATUS "Build listeners: ${BUILD_LISTENERS}")
+message(STATUS "Build SeMiTONE listeners: ${BUILD_LISTENERS}")
 if(BUILD_LISTENERS)
     target_compile_definitions(SeMiTONE PUBLIC BUILD_LISTENERS)
 endif()
 
+message(STATUS "SeMiTONE API: ${ENABLE_API}")
 if(ENABLE_API)
     target_compile_definitions(SeMiTONE PUBLIC ENABLE_API)
 endif()
